Thu Dec 22 15:44:50 1994  Theodore Y. Ts'o  (tytso@dcl)

	* configure.in: Add test for uid_t.

Fri Oct 14 23:12:00 1994  Theodore Y. Ts'o  (tytso@dcl)

	* configure.in: Add ISODE_DEFS rule.

Mon Oct  3 19:32:59 1994  Theodore Y. Ts'o  (tytso@dcl)

	* rc_def.c (krb5_rc_dfl_recover): krb5_rc_io_size was being called
		(still) with the wrong type argument.  Should have been &t->d.

Fri Sep 30 21:59:08 1994  Theodore Y. Ts'o  (tytso@dcl)

	* rc_def.c (krb5_rc_dfl_ops): Add placeholder for magic number

Thu Sep 29 22:11:20 1994  Theodore Y. Ts'o  (tytso@dcl)

	* rc_dfl.c (krb5_rc_dfl_recover): krb5_rc_io_size was being called
		with the wrong type argument.  I have no idea how it was


Thu Sep  8 23:34:53 1994  Theodore Y. Ts'o  (tytso@pinata)

	* rc_io.c: The variables dirlen and dir were declared global, and
		didn't need to be; changed to be static.

Sat Aug 20 00:09:37 1994  Theodore Y. Ts'o  (tytso at tsx-11)

	* rc_dfl.c (krb5_rc_dfl_expunge): name (t->name) was getting freed
	and we tried to use it.  Clear t->name to stop it from being
	freed, and then free it later.

Mon Jun 20 19:37:13 1994  Theodore Y. Ts'o  (tytso at tsx-11)

	* rc_base.h: #include <krb5/osconf.h> so that build works using	imake. 
