@@ -30,8 +30,9 @@ static struct krb5_rc_typelist *typehead = &krb5_rc_typelist_dfl;
 semaphore ex_typelist = 1;
 #endif
 
-krb5_error_code krb5_rc_register_type(ops)
-krb5_rc_ops *ops;
+krb5_error_code krb5_rc_register_type(context, ops)
+    krb5_context context;
+    krb5_rc_ops *ops;
 {
  struct krb5_rc_typelist *t;
 #ifdef SEMAPHORE
@@ -58,9 +59,10 @@ krb5_rc_ops *ops;
  return 0;
 }
 
-krb5_error_code krb5_rc_resolve_type(id, type)
-krb5_rcache *id;
-char *type;
+krb5_error_code krb5_rc_resolve_type(context, id, type)
+    krb5_context context;
+    krb5_rcache *id;
+    char *type;
 {
  struct krb5_rc_typelist *t;
 #ifdef SEMAPHORE
@@ -78,17 +80,15 @@ char *type;
  return 0;
 }
 
-char *krb5_rc_get_type(id)
-krb5_rcache id;
+char *krb5_rc_get_type(context, id)
+    krb5_context context;
+    krb5_rcache id;
 {
  return id->ops->type;
 }
 
-#ifdef __STDC__
-char *krb5_rc_default_type(void)
-#else
-char *krb5_rc_default_type()
-#endif
+char *krb5_rc_default_type(context)
+    krb5_context context;
 {
  char *s;
  if (s = getenv("KRB5RCACHETYPE"))
@@ -97,11 +97,8 @@ char *krb5_rc_default_type()
    return "dfl";
 }
 
-#ifdef __STDC__
-char *krb5_rc_default_name(void)
-#else
-char *krb5_rc_default_name()
-#endif
+char *krb5_rc_default_name(context)
+    krb5_context context;
 {
  char *s;
  if (s = getenv("KRB5RCACHENAME"))
@@ -111,27 +108,31 @@ char *krb5_rc_default_name()
 }
 
 krb5_error_code
-krb5_rc_default(id)
-krb5_rcache *id;
+krb5_rc_default(context, id)
+    krb5_context context;
+    krb5_rcache *id;
 {
     krb5_error_code retval;
 
     if (!(*id = (krb5_rcache )malloc(sizeof(**id))))
 	return KRB5_RC_MALLOC;
 
-    if (retval = krb5_rc_resolve_type(id, krb5_rc_default_type())) {
+    if (retval = krb5_rc_resolve_type(context, id, 
+			   	      krb5_rc_default_type(context))) {
 	FREE(*id);
 	return retval;
     }
-    if (retval = krb5_rc_resolve(*id, krb5_rc_default_name()))
+    if (retval = krb5_rc_resolve(context, *id, 
+				 krb5_rc_default_name(context)))
 	FREE(*id);
     return retval;
 }
 
 
-krb5_error_code krb5_rc_resolve_full(id, string_name)
-krb5_rcache *id;
-char *string_name;
+krb5_error_code krb5_rc_resolve_full(context, id, string_name)
+    krb5_context context;
+    krb5_rcache *id;
+    char *string_name;
 {
     char *type;
     char *residual;
@@ -150,13 +151,13 @@ char *string_name;
 	return KRB5_RC_MALLOC;
     }
 
-    if (retval = krb5_rc_resolve_type(id,type)) {
+    if (retval = krb5_rc_resolve_type(context, id,type)) {
 	FREE(type);
 	FREE(*id);
 	return retval;
     }
     FREE(type);
-    if (retval = krb5_rc_resolve(*id,residual + 1))
+    if (retval = krb5_rc_resolve(context, *id,residual + 1))
 	FREE(*id);
     return retval;
 }
