@@ -24,14 +24,39 @@ krb5_rc_iostuff;
 
 /* first argument is always iostuff for result file */
 
-krb5_error_code krb5_rc_io_creat PROTOTYPE((krb5_rc_iostuff *,char **));
-krb5_error_code krb5_rc_io_open PROTOTYPE((krb5_rc_iostuff *,char *));
-krb5_error_code krb5_rc_io_move PROTOTYPE((krb5_rc_iostuff *,krb5_rc_iostuff *));
-krb5_error_code krb5_rc_io_write PROTOTYPE((krb5_rc_iostuff *,krb5_pointer,int));
-krb5_error_code krb5_rc_io_read PROTOTYPE((krb5_rc_iostuff *,krb5_pointer,int));
-krb5_error_code krb5_rc_io_close PROTOTYPE((krb5_rc_iostuff *));
-krb5_error_code krb5_rc_io_destroy PROTOTYPE((krb5_rc_iostuff *));
-krb5_error_code krb5_rc_io_mark PROTOTYPE((krb5_rc_iostuff *));
-krb5_error_code krb5_rc_io_unmark PROTOTYPE((krb5_rc_iostuff *));
+krb5_error_code krb5_rc_io_creat 
+	PROTOTYPE((krb5_context,
+		   krb5_rc_iostuff *,
+		   char **));
+krb5_error_code krb5_rc_io_open 
+	PROTOTYPE((krb5_context,
+		   krb5_rc_iostuff *,
+		   char *));
+krb5_error_code krb5_rc_io_move 
+	PROTOTYPE((krb5_context,
+		   krb5_rc_iostuff *,
+		   krb5_rc_iostuff *));
+krb5_error_code krb5_rc_io_write 
+	PROTOTYPE((krb5_context,
+		   krb5_rc_iostuff *,
+		   krb5_pointer,
+		   int));
+krb5_error_code krb5_rc_io_read 
+	PROTOTYPE((krb5_context,
+		   krb5_rc_iostuff *,
+		   krb5_pointer,
+		   int));
+krb5_error_code krb5_rc_io_close 
+	PROTOTYPE((krb5_context,
+		   krb5_rc_iostuff *));
+krb5_error_code krb5_rc_io_destroy 
+	PROTOTYPE((krb5_context,
+		   krb5_rc_iostuff *));
+krb5_error_code krb5_rc_io_mark 
+	PROTOTYPE((krb5_context,
+		   krb5_rc_iostuff *));
+krb5_error_code krb5_rc_io_unmark 
+	PROTOTYPE((krb5_context,
+		   krb5_rc_iostuff *));
 
 #endif
