@@ -1,3 +1,7 @@
+Fri Jan 13 15:23:47 1995  Chris Provenzano (proven@mit.edu)
+
+    * Added krb5_context to all krb5_routines
+
 Thu Dec 22 15:44:50 1994  Theodore Y. Ts'o  (tytso@dcl)
 
 	* configure.in: Add test for uid_t.
